--- a/apps/tasks/english.lproj/default_theme/top_bar.css
+++ b/apps/tasks/english.lproj/default_theme/top_bar.css
@@ -21,7 +21,7 @@ Top Navigation Styling
 }
 
 .dock-label {
-  font-size: 10px !important;
+  font-size: 9px !important;
   color: #fff !important;
   font-weight: bold !important;
 }
